--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description" content="Book Vibe" />
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
